# postal-mcp

./: .gitignore  AGENTS.md  LICENSE.md  README.md  client.py  main.py  pyproject.toml  server.py  spec.md
postal/: mq.py  server.py
